--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.12"]
 
     steps:
       - name: Checkout code
@@ -30,20 +30,8 @@ jobs:
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
 
-      - name: Run pre-commit checks
-        uses: pre-commit/action@v3.0.0
-
-      - name: Lint with Flake8
+      - name: Install specific dependencies for Python 3.8 and 3.9
+        if: matrix.python-version == '3.8' || matrix.python-version == '3.9'
         run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
-
-      - name: Test with Pytest
-        run: |
-          pytest -v  # Add -v for verbose output, helpful for debugging
-
-      - name: Build Docker image
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: |
-          docker build . --file Dockerfile --tag faq-chatbot-app:${{ github.sha }}
-          docker image ls #helpful for debugging
+          pip install "fastapi<0.90.0"  # Example: Pin an older version
+          # Add other problematic packages with
